Fancying things up and updated the readme